--- a/overlay/packages/services/Telephony/res/values/config.xml
+++ b/overlay/packages/services/Telephony/res/values/config.xml
@@ -23,4 +23,6 @@
     <bool name="send_mic_mute_to_AudioManager">true</bool>
     <!-- Flag indicating if the tty is enabled -->
     <bool name="tty_enabled">true</bool>
+    <!-- Allow disabling the voicemail indicator -->
+    <bool name="sprint_mwi_quirk">true</bool>
 </resources>
